# message-lite

./: CMakeLists.txt  README.md  ReleaseNotes.md
include/: message_lite.h  message_log.h
src/: message_daemon.c  message_daemon.h  message_event_handle.c  message_event_handle.h  message_log.c  message_msgs.c  message_socket.c  message_socket.h  message_users.c  message_users.h
src_mc/: message_client.c  message_client.h
test/: CMakeLists.txt  Gtest_message_event_handle.cpp  test_msgs.c  test_users.c
